[package]
name = "rust-pinger"
version = "0.1.0"
authors = ["mk10969 <mk10969@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version = "1.4.5", features = ["mysql"]}
redis = "0.17.0"
dotenv = "0.15.0"
envy = "0.4"
serde = "1.0.117"
serde_derive = "1.0.117"
