[package]
name = "pinger2"
version = "0.1.0"
authors = ["mk10969 <mk10969@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
mysql = "20.1.0"
parse_duration = "2.1.0"
colored = "2.0.0"
log = "0.4"
env_logger = "0.8.2"
console = "0.13.0"
ctrlc = "3.1.7"
clap = "2.33.3"
thiserror = "1.0.22"